--- a/templates/themes/base_visitor.html.twig
+++ b/templates/themes/base_visitor.html.twig
@@ -4,7 +4,24 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Groupe 3R {% block title %}{% endblock %}</title>
+
+        
+        {# Favicon #}
+        <link rel="apple-touch-icon" sizes="180x180" href="{{ asset('images/favicon/apple-touch-icon.png') }}">
+        <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('images/favicon/favicon-32x32.png') }}">
+        <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('images/favicon/favicon-16x16.png') }}">
+        <link rel="manifest" href="{{ asset('images/favicon/site.webmanifest') }}">
+        <link rel="mask-icon" href="{{ asset('images/favicon/safari-pinned-tab.svg') }}" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
+
+        {# Font family #}
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins&display=swap" rel="stylesheet">
+
+
 
         {# Chargement de la partie css de bootstrap et du css depuis webpack encore #}
         {% block webpack_css %}
@@ -15,37 +32,21 @@
         {% block webpack_js %}
             {{ encore_entry_script_tags('app') }}
         {% endblock %}
-    </head>
-<body class="bg-light">
-    
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Features</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            </div>
-        </div>
-    </nav>
 
+       
+    </head>
+    <body class="bg-light body-visitor">
+
+        {# Barre de navigation #}
+        {% include "layouts/navbar/_navbar_visitor.html.twig" %}
+
+    {# Contenu spécifique à chaque page #}
     <main class="container-fluid">
         {% block main %}{% endblock %}
     </main>
 
+    {# Pied de page #}
+    {% include "layouts/footer/_footer_visitor.html.twig" %}
+    
 </body>
 </html>
