Mise en place du Template de l'admin et de l'utilisateur

--- a/templates/layouts/navbar/_navbar_visitor.html.twig
+++ b/templates/layouts/navbar/_navbar_visitor.html.twig
@@ -24,15 +24,15 @@
                 {% if app.user %}
                     {% if is_granted ('ROLE_SUPER_ADMIN')%}
                         <li class="nav-item">
-                            <a class="nav-link" href="">Espace admin</a>
+                            <a class="nav-link" href="{{ path('admin.home.index') }}">Espace admin</a>
                         </li>
                     {% elseif is_granted ('ROLE_ADMIN')%}
                         <li class="nav-item">
-                            <a class="nav-link" href="">Espace admin</a>
+                            <a class="nav-link" href="{{ path('admin.home.index') }}">Espace admin</a>
                         </li>
                     {% elseif is_granted ('ROLE_USER')%}
                         <li class="nav-item">
-                            <a class="nav-link" href="">Espace privé</a>
+                            <a class="nav-link" href="{{ path('user.home.index') }}">Espace privé</a>
                         </li>     
                     {% endif %}
                         <li class="nav-item">
