--- a/templates/themes/base_admin.html.twig
+++ b/templates/themes/base_admin.html.twig
@@ -67,7 +67,7 @@
             <div id="page-content-wrapper">
 
                 {# Barre de navigation #}
-                {% include "layouts/nav/_nav_admin.html.twig" %}
+                {% include "layouts/navbar/_navbar_admin.html.twig" %}
 
                 {# Le contenu spécifique à chaque page #}
                 <main class="container-fluid px-4">
