--- a/templates/pages/admin/home/index.html.twig
+++ b/templates/pages/admin/home/index.html.twig
@@ -1,1 +1,7 @@
-admin
+{% extends "themes/base_admin.html.twig" %}
+
+{% block title %}Espace d'administration{% endblock %}
+
+{% block main %}
+    <h1 class="text-center my-3 display-5">Espace d'administration</h1>
+{% endblock %}
